--- a/src/app/theme.css
+++ b/src/app/theme.css
@@ -1,105 +1,97 @@
 :root {
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.19 0.01 248.51);
-  --card: oklch(0.98 0 197.14);
-  --card-foreground: oklch(0.19 0.01 248.51);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.19 0.01 248.51);
-  --primary: oklch(0.67 0.16 245);
-  --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.19 0.01 248.51);
-  --secondary-foreground: oklch(1 0 0);
-  --muted: oklch(0.92 0 286.37);
-  --muted-foreground: oklch(0.19 0.01 248.51);
-  --accent: oklch(0.94 0.02 250.85);
-  --accent-foreground: oklch(0.67 0.16 245);
-  --destructive: oklch(0.62 0.24 25.77);
-  --destructive-foreground: oklch(1 0 0);
-  --border: oklch(0.93 0.01 231.66);
-  --input: oklch(0.98 0 228.78);
-  --ring: oklch(0.68 0.16 243.35);
-  --chart-1: oklch(0.67 0.16 245);
-  --chart-2: oklch(0.69 0.16 160.35);
-  --chart-3: oklch(0.82 0.16 82.53);
-  --chart-4: oklch(0.71 0.18 151.71);
-  --chart-5: oklch(0.59 0.22 10.58);
-  --sidebar: oklch(0.98 0 197.14);
-  --sidebar-foreground: oklch(0.19 0.01 248.51);
-  --sidebar-primary: oklch(0.67 0.16 245);
-  --sidebar-primary-foreground: oklch(1 0 0);
-  --sidebar-accent: oklch(0.94 0.02 250.85);
-  --sidebar-accent-foreground: oklch(0.67 0.16 245);
-  --sidebar-border: oklch(0.93 0.01 238.52);
-  --sidebar-ring: oklch(0.68 0.16 243.35);
-  --font-sans: Open Sans, sans-serif;
+  --background: oklch(0.9578 0.0058 264.5321);
+  --foreground: oklch(0.4355 0.0430 279.3250);
+  --card: oklch(1.0000 0 0);
+  --card-foreground: oklch(0.4355 0.0430 279.3250);
+  --popover: oklch(0.8575 0.0145 268.4756);
+  --popover-foreground: oklch(0.4355 0.0430 279.3250);
+  --primary: oklch(0.5547 0.2503 297.0156);
+  --primary-foreground: oklch(1.0000 0 0);
+  --secondary: oklch(0.8575 0.0145 268.4756);
+  --secondary-foreground: oklch(0.4355 0.0430 279.3250);
+  --muted: oklch(0.9060 0.0117 264.5071);
+  --muted-foreground: oklch(0.5471 0.0343 279.0837);
+  --accent: oklch(0.6820 0.1448 235.3822);
+  --accent-foreground: oklch(1.0000 0 0);
+  --destructive: oklch(0.5505 0.2155 19.8095);
+  --destructive-foreground: oklch(1.0000 0 0);
+  --border: oklch(0.8083 0.0174 271.1982);
+  --input: oklch(0.8575 0.0145 268.4756);
+  --ring: oklch(0.5547 0.2503 297.0156);
+  --chart-1: oklch(0.5547 0.2503 297.0156);
+  --chart-2: oklch(0.6820 0.1448 235.3822);
+  --chart-3: oklch(0.6250 0.1772 140.4448);
+  --chart-4: oklch(0.6920 0.2041 42.4293);
+  --chart-5: oklch(0.7141 0.1045 33.0967);
+  --sidebar: oklch(0.9335 0.0087 264.5206);
+  --sidebar-foreground: oklch(0.4355 0.0430 279.3250);
+  --sidebar-primary: oklch(0.5547 0.2503 297.0156);
+  --sidebar-primary-foreground: oklch(1.0000 0 0);
+  --sidebar-accent: oklch(0.6820 0.1448 235.3822);
+  --sidebar-accent-foreground: oklch(1.0000 0 0);
+  --sidebar-border: oklch(0.8083 0.0174 271.1982);
+  --sidebar-ring: oklch(0.5547 0.2503 297.0156);
+  --font-sans: Montserrat, sans-serif;
   --font-serif: Georgia, serif;
-  --font-mono: Menlo, monospace;
-  --radius: 1.3rem;
-  --shadow-2xs: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-xs: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-sm: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0),
-    0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0);
-  --shadow: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0),
-    0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-md: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0),
-    0px 2px 4px -1px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-lg: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0),
-    0px 4px 6px -1px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-xl: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0),
-    0px 8px 10px -1px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-2xl: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0);
+  --font-mono: Fira Code, monospace;
+  --radius: 0.35rem;
+  --shadow-2xs: 0px 4px 6px 0px hsl(240 30% 25% / 0.06);
+  --shadow-xs: 0px 4px 6px 0px hsl(240 30% 25% / 0.06);
+  --shadow-sm: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 1px 2px -1px hsl(240 30% 25% / 0.12);
+  --shadow: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 1px 2px -1px hsl(240 30% 25% / 0.12);
+  --shadow-md: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 2px 4px -1px hsl(240 30% 25% / 0.12);
+  --shadow-lg: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 4px 6px -1px hsl(240 30% 25% / 0.12);
+  --shadow-xl: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 8px 10px -1px hsl(240 30% 25% / 0.12);
+  --shadow-2xl: 0px 4px 6px 0px hsl(240 30% 25% / 0.30);
+  --tracking-normal: 0em;
+  --spacing: 0.25rem;
 }
 
 .dark {
-  --background: oklch(0 0 0);
-  --foreground: oklch(0.93 0 228.79);
-  --card: oklch(0.21 0.01 274.53);
-  --card-foreground: oklch(0.89 0 0);
-  --popover: oklch(0 0 0);
-  --popover-foreground: oklch(0.93 0 228.79);
-  --primary: oklch(0.67 0.16 245.01);
-  --primary-foreground: oklch(1 0 0);
-  --secondary: oklch(0.96 0 219.53);
-  --secondary-foreground: oklch(0.19 0.01 248.51);
-  --muted: oklch(0.21 0 0);
-  --muted-foreground: oklch(0.56 0.01 247.97);
-  --accent: oklch(0.19 0.03 242.55);
-  --accent-foreground: oklch(0.67 0.16 245.01);
-  --destructive: oklch(0.62 0.24 25.77);
-  --destructive-foreground: oklch(1 0 0);
-  --border: oklch(0.27 0 248);
-  --input: oklch(0.3 0.03 244.82);
-  --ring: oklch(0.68 0.16 243.35);
-  --chart-1: oklch(0.67 0.16 245);
-  --chart-2: oklch(0.69 0.16 160.35);
-  --chart-3: oklch(0.82 0.16 82.53);
-  --chart-4: oklch(0.71 0.18 151.71);
-  --chart-5: oklch(0.59 0.22 10.58);
-  --sidebar: oklch(0.21 0.01 274.53);
-  --sidebar-foreground: oklch(0.89 0 0);
-  --sidebar-primary: oklch(0.68 0.16 243.35);
-  --sidebar-primary-foreground: oklch(1 0 0);
-  --sidebar-accent: oklch(0.19 0.03 242.55);
-  --sidebar-accent-foreground: oklch(0.67 0.16 245.01);
-  --sidebar-border: oklch(0.38 0.02 240.59);
-  --sidebar-ring: oklch(0.68 0.16 243.35);
-  --font-sans: Open Sans, sans-serif;
+  --background: oklch(0.1155 0.0254 284.0647);
+  --foreground: oklch(0.9787 0.0426 272.2767);
+  --card: oklch(0.1429 0.0304 283.9110);
+  --card-foreground: oklch(0.9787 0.0426 272.2767);
+  --popover: oklch(0.2037 0.0320 280.1520);
+  --popover-foreground: oklch(0.9787 0.0426 272.2767);
+  --primary: oklch(0.7871 0.1187 304.7693);
+  --primary-foreground: oklch(0.1429 0.0304 283.9110);
+  --secondary: oklch(0.3765 0.0340 278.6430);
+  --secondary-foreground: oklch(0.9787 0.0426 272.2767);
+  --muted: oklch(0.1973 0.0294 276.2144);
+  --muted-foreground: oklch(0.8510 0.0396 273.9320);
+  --accent: oklch(0.8467 0.0833 210.2545);
+  --accent-foreground: oklch(0.1429 0.0304 283.9110);
+  --destructive: oklch(0.7556 0.1297 2.7642);
+  --destructive-foreground: oklch(0.1429 0.0304 283.9110);
+  --border: oklch(0.4240 0.0319 281.9784);
+  --input: oklch(0.4240 0.0319 281.9784);
+  --ring: oklch(0.7871 0.1187 304.7693);
+  --chart-1: oklch(0.7871 0.1187 304.7693);
+  --chart-2: oklch(0.8467 0.0833 210.2545);
+  --chart-3: oklch(0.8577 0.1092 142.7153);
+  --chart-4: oklch(0.8237 0.1015 52.6294);
+  --chart-5: oklch(0.9226 0.0238 30.4919);
+  --sidebar: oklch(0.0828 0.0204 284.2039);
+  --sidebar-foreground: oklch(0.9787 0.0426 272.2767);
+  --sidebar-primary: oklch(0.7871 0.1187 304.7693);
+  --sidebar-primary-foreground: oklch(0.1429 0.0304 283.9110);
+  --sidebar-accent: oklch(0.8467 0.0833 210.2545);
+  --sidebar-accent-foreground: oklch(0.1429 0.0304 283.9110);
+  --sidebar-border: oklch(0.5037 0.0320 280.1520);
+  --sidebar-ring: oklch(0.7871 0.1187 304.7693);
+  --font-sans: Montserrat, sans-serif;
   --font-serif: Georgia, serif;
-  --font-mono: Menlo, monospace;
-  --radius: 1.3rem;
-  --shadow-2xs: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-xs: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-sm: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0),
-    0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0);
-  --shadow: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0),
-    0px 1px 2px -1px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-md: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0),
-    0px 2px 4px -1px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-lg: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0),
-    0px 4px 6px -1px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-xl: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0),
-    0px 8px 10px -1px hsl(202.82 89.12% 53.14% / 0);
-  --shadow-2xl: 0px 2px 0px 0px hsl(202.82 89.12% 53.14% / 0);
+  --font-mono: Fira Code, monospace;
+  --radius: 0.35rem;
+  --shadow-2xs: 0px 4px 6px 0px hsl(240 30% 25% / 0.06);
+  --shadow-xs: 0px 4px 6px 0px hsl(240 30% 25% / 0.06);
+  --shadow-sm: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 1px 2px -1px hsl(240 30% 25% / 0.12);
+  --shadow: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 1px 2px -1px hsl(240 30% 25% / 0.12);
+  --shadow-md: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 2px 4px -1px hsl(240 30% 25% / 0.12);
+  --shadow-lg: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 4px 6px -1px hsl(240 30% 25% / 0.12);
+  --shadow-xl: 0px 4px 6px 0px hsl(240 30% 25% / 0.12), 0px 8px 10px -1px hsl(240 30% 25% / 0.12);
+  --shadow-2xl: 0px 4px 6px 0px hsl(240 30% 25% / 0.30);
 }
 
 @theme inline {
